[package]
name = "pk9"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mnl = "0.2.2"
nftnl = "0.6.2"
nfq = "0.2.5"
signal-hook = "0.3.17"
libc = "0.2"

[features]
default = ["udp", "tcp", "output", "input"]
udp = []
tcp = []
input = []
output = []

[profile.release]
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary
